# simple-local-rag

./: .gitignore  AGENTS.md  README.md  pyproject.toml
ui/: app.py
