[project]
name = "simple-local-rag"
version = "0.1.0"
description = "Aplikacja do okalnego RAG z wykorzystaniem Ollama"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chromadb>=1.0.6",
    "docx2txt>=0.9",
    "ebooklib>=0.18",
    "gradio>=5.25.2",
    "html2text>=2025.4.15",
    "llama-index>=0.12.32",
    "llama-index-core>=0.12.32",
    "llama-index-embeddings-ollama>=0.6.0",
    "llama-index-llms-ollama>=0.5.4",
    "llama-index-vector-stores-chroma>=0.4.1",
]

